--- a/podcastr/package.json
+++ b/podcastr/package.json
@@ -11,5 +11,13 @@
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "main": "index.js",
+  "author": "Daniela C. Barbosa <contato@danielacb.com> (http://danielacb.com/)",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^14.14.41",
+    "@types/react": "^17.0.3",
+    "typescript": "^4.2.4"
   }
 }
