--- a/podcastr/package.json
+++ b/podcastr/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "next": "10.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.32.11"
   },
   "main": "index.js",
   "author": "Daniela C. Barbosa <contato@danielacb.com> (http://danielacb.com/)",
