--- a/react-native/plantmanager/package.json
+++ b/react-native/plantmanager/package.json
@@ -8,11 +8,12 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "server": "json-server --watch ./src/services/server.json --port 3333 --host 192.168.0.3"
+    "server": "json-server --watch ./src/services/server.json --port 3333 --host 192.168.0.6"
   },
   "dependencies": {
     "@expo-google-fonts/jost": "^0.2.0",
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
