--- a/react-native/plantmanager/package.json
+++ b/react-native/plantmanager/package.json
@@ -14,9 +14,11 @@
     "@expo-google-fonts/jost": "^0.2.0",
     "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/datetimepicker": "4.0.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
+    "date-fns": "^2.28.0",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
