--- a/react-native/plantmanager/package.json
+++ b/react-native/plantmanager/package.json
@@ -8,7 +8,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "server": "json-server --watch ./src/services/server.json --port 3333 --host 192.168.1.12"
+    "server": "json-server --watch ./src/services/server.json --port 3333 --host 192.168.0.7"
   },
   "dependencies": {
     "@expo-google-fonts/jost": "^0.2.0",
@@ -23,6 +23,7 @@
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
+    "expo-notifications": "~0.14.0",
     "expo-status-bar": "~1.2.0",
     "lottie-react-native": "5.0.1",
     "react": "17.0.1",
