fullstack/soccer-sweepstake: create mobile components

--- a/fullstack/soccer-sweepstake/mobile/app.json
+++ b/fullstack/soccer-sweepstake/mobile/app.json
@@ -1,7 +1,8 @@
 {
   "expo": {
-    "name": "nlwcopamobile",
-    "slug": "nlwcopamobile",
+    "name": "soccer-sweepstake",
+    "slug": "soccer-sweepstake",
+    "scheme": "soccer-sweepstake",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
